# kpf

./: LICENSE  README.md  default.nix  kpf.cabal  shell.nix
Control/: Category.hs
Hask/: Functor.hs  Groupoid.hs  Iso.hs  Tensor.hs
Hask/Category/: Polynomial.hs  Sub.hs
Hask/Functor/: Adjoint.hs  Compose.hs  Faithful.hs  Polynomial.hs
