name:          kpf
category:      categories
version:       0.1.0
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Kyle McKean
maintainer:    Kyle McKean <mckean.kylej@gmail.com>
stability:     experimental
homepage:      http://github.com/mckeankylej/kpf
bug-reports:   http://github.com/mckeankylej/kpf/issues
copyright:     Copyright (C) 2018 Edward Kmett, Kyle McKean
synopsis:      Kind Polymorphic Category Theory
description:   FIXME
build-type:    Simple
tested-with:   GHC == 8.4.2

source-repository head
  type: git
  location: git://github.com/mckeankylej/kpf.git

library
  default-language: Haskell2010
  ghc-options: -Wall -Wno-unticked-promoted-constructors 
  build-depends:
      base >= 4.11 && < 5
    , constraints >= 0.10
  exposed-modules:
      Hask.Functor
    , Hask.Functor.Faithful
    , Hask.Functor.Polynomial
    , Hask.Functor.Adjoint
    , Hask.Functor.Compose
    , Hask.Groupoid
    , Hask.Iso
    , Hask.Tensor

test-suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Doctest.hs
  build-depends:
      base >= 4.11 && < 5
    , kpf
    , doctest >= 0.10
